
# Test1
add_executable(test1
    test1.cc)
target_link_libraries(test1 diamond ${DIAMOND_LIB_DEPS})


# Test2
add_executable(test2
    test2.cc)
target_link_libraries(test2 diamond ${DIAMOND_LIB_DEPS})

# Test3
add_executable(test3a test3a.cc)
target_link_libraries(test3a diamond ${DIAMOND_LIB_DEPS})
add_executable(test3b test3b.cc)
target_link_libraries(test3b diamond ${DIAMOND_LIB_DEPS})

# Test4
add_executable(test4a test4a.cc)
target_link_libraries(test4a diamond ${DIAMOND_LIB_DEPS})
add_executable(test4b test4b.cc)
target_link_libraries(test4b diamond ${DIAMOND_LIB_DEPS})

# Test5
add_executable(test5 test5.cc)
target_link_libraries(test5 diamond ${DIAMOND_LIB_DEPS})

# Test6
add_executable(test6 test6.cc)
target_link_libraries(test6 diamond ${DIAMOND_LIB_DEPS})

# Test7
add_executable(test7 test7.cc)
target_link_libraries(test7 diamond ${DIAMOND_LIB_DEPS})

# Test8
add_executable(test8 test8.cc)
target_link_libraries(test8 diamond ${DIAMOND_LIB_DEPS})

# Test9
add_executable(test9 test9.cc)
target_link_libraries(test9 diamond ${DIAMOND_LIB_DEPS})

# Test10
add_executable(test10 test10.cc)
target_link_libraries(test10 diamond ${DIAMOND_LIB_DEPS})

# Test11
add_executable(test11 test11.cc)
target_link_libraries(test11 diamond ${DIAMOND_LIB_DEPS})

# Test12
add_executable(test12 test12.cc)
target_link_libraries(test12 diamond ${DIAMOND_LIB_DEPS})

# Test13
add_executable(test13 test13.cc)
target_link_libraries(test13 diamond ${DIAMOND_LIB_DEPS})

# Test14
add_executable(test14 test14.cc)
target_link_libraries(test14 diamond ${DIAMOND_LIB_DEPS})

# Test15
add_executable(test15 test15.cc)
target_link_libraries(test15 diamond ${DIAMOND_LIB_DEPS})

# Test16
add_executable(test16 test16.cc)
target_link_libraries(test16 diamond ${DIAMOND_LIB_DEPS})

# Test17
add_executable(test17 test17.cc)
target_link_libraries(test17 diamond ${DIAMOND_LIB_DEPS})

# Test18
add_executable(test18 test18.cc)
target_link_libraries(test18 diamond ${DIAMOND_LIB_DEPS})

